--- a/News/Views/Contact/Index.cshtml
+++ b/News/Views/Contact/Index.cshtml
@@ -18,7 +18,11 @@
     <div class="row">
         <div class="col-sm-8">
             <h3>Let's Get In Touch!</h3>
-            <p>Lid est laborum dolo rumes fugats untras. Etharums ser quidem rerum facilis dolores nemis omnis fugats vitaes nemo minima rerums unsers sadips amets. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+            <p>KPMG in the UK is a leading provider of professional services, including audit, tax and advisory specialisms - delivering integrated solutions to our clients’ issues.
+
+                In the UK, we have over 12,000 partners and staff working in more than 20 offices. Being part of a strong global network of member firms gives us a truly global mindset.
+
+                With passion and purpose, we work shoulder-to-shoulder with you, integrating innovative approaches and deep expertise to deliver real results.</p>
             <form action="contact-form-submission.php" method="POST" role="form">
                 <div class="row">
                     <div class="form-group col-lg-4">
@@ -46,14 +50,14 @@
             </form>
         </div>
         <div class="col-sm-4">
-            <h3>Modern Business</h3>
-            <h4>A Start Bootstrap Template</h4>
+            <h3>KPMG Business</h3>
+            <h4>KPMG History</h4>
             <p>
-                5555 44th Street N.<br>
-                Bootstrapville, CA 32323<br>
+                KPMG Canary Wharf.<br>
+                London, United Kingdom<br>
             </p>
             <p><i class="fa fa-phone"></i> <abbr title="Phone">P</abbr>: (555) 984-3600</p>
-            <p><i class="fa fa-envelope-o"></i> <abbr title="Email">E</abbr>: <a href="mailto:feedback@startbootstrap.com">feedback@startbootstrap.com</a></p>
+            <p><i class="fa fa-envelope-o"></i> <abbr title="Email">E</abbr>: <a href="mailto:feedback@kpmg.com">feedback@startbootstrap.com</a></p>
             <p><i class="fa fa-clock-o"></i> <abbr title="Hours">H</abbr>: Monday - Friday: 9:00 AM to 5:00 PM</p>
             <ul class="list-unstyled list-inline list-social-icons">
                 <li class="tooltip-social facebook-link"><a title="Facebook" data-placement="top" data-toggle="tooltip" href="#facebook-page"><i class="fa fa-facebook-square fa-2x"></i></a></li>
