--- a/News/Views/Home/_NewsDetails.cshtml
+++ b/News/Views/Home/_NewsDetails.cshtml
@@ -1,41 +1,38 @@
-﻿@model News.Models.NewsDetailsViewModel
-
-<div class="container">
-    <div class="row">
-        <div class="col-lg-12">
-            <h1 class="page-header">
-                @ViewBag.Title
-
-            </h1>
-        </div>
-    </div>
-    
+﻿@using System.Linq
+@model News.Models.NewsDetailsViewModel
 
 @if (Model.Description != null)
-    {
-        @:Comments:
-        <ul>
-            @foreach (var comment in Model.Comments)
-            {
-                <li>
-                    @comment.Text
-                    @if (@comment.Author != null)
-                    {
-                        @: (by @comment.Author)
-                    }
-                </li>
-            }
-        </ul>
-    }
-    else
-    {
-        <p> No Comments</p>
-    }
+{
+    <div>
+        <div class="description"> Description: @Model.Description</div>
+    </div>
+}
 
-    @*@if (ViewBag.CanEdit)
+@if (Model.Comments.Any())
+{
+    @:Comments:
+    <ul>
+        @foreach (var comment in Model.Comments)
         {
-            @Html.ActionLink("Edit", "Edit", "News", new {id=Model.Id}, new {@class = "btn btn-default"})
-            <span></span>
-            @Html.ActionLink("Delete", "Delete", "News", new {id = Model.Id}, new {@class = "btn btn-default"})
-        }*@
+            <li>
+                @comment.Text
+                @if (@comment.Author != null)
+                {
+                    @: (by @comment.Author)
+                }
+            </li>
+        }
+    </ul>
+}
+else
+{
+    <p> No Comments for this news post.</p>
+}
+
+@if (ViewBag.CanEdit)
+{
+    @Html.ActionLink("Edit", "Edit", "News", new {id = Model.Id}, new {@class = "btn btn-default"})
+    <span></span>
+    @Html.ActionLink("Delete", "Delete", "News", new {id = Model.Id}, new {@class = "btn btn-default"})
+}
 
