--- a/News/Views/Home/Index.cshtml
+++ b/News/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 @{
     ViewBag.Title = "KPMG News";
 }
-@*@Html.Partial("_News")*@
+
 <div id="myCarousel" class="carousel slide">
     <!-- Indicators -->
     <ol class="carousel-indicators">
@@ -57,37 +57,30 @@
 
         <div class="row">
             <div class="col-lg-4 col-md-4">
-                <h3><i class="fa fa-check-circle"></i> Latest News</h3>                
+                <h3><i class="fa fa-check-circle"></i> Latest News</h3>
                 @if (Model.LatestNews.Any())
                 {
                     @Html.DisplayFor(x => x.LatestNews)
                 }
                 else
                 {
-                    <div> No Events </div>
+                    <div> No Latest News Available. </div>
                 }
             </div>
             <div class="col-lg-4 col-md-4">
-                <h3><i class="fa fa-pencil"></i> Old News </h3>                
+                <h3><i class="fa fa-pencil"></i> Old News </h3>
                 @if (Model.OldNews.Any())
                 {
                     @Html.DisplayFor(x => x.OldNews)
                 }
                 else
                 {
-                    <div> No Events </div>
+                    <div> No Old News availabke </div>
                 }
             </div>
             <div class="col-lg-4 col-md-4">
                 <h3><i class="fa fa-folder-open"></i> Popular News</h3>
-                @if (Model.OldNews.Any())
-                {
-                    @Html.DisplayFor(x => x.OldNews)
-                }
-                else
-                {
-                    <div> No Events </div>
-                }
+                @*@Html.Partial("_News")*@
             </div>
         </div>
         <!-- /.row -->
@@ -231,7 +224,7 @@
 
     <div class="row well">
         <div class="col-lg-8 col-md-8">
-            <h4>'Modern Business' is a ready-to-use, Bootstrap 3 updated, multi-purpose HTML theme!</h4>
+            <h4>'KPMG Business' is a ready-to-use, Bootstrap 3 updated, multi-purpose HTML theme!</h4>
             <p>For more templates and more page options that you can integrate into this website template, visit Start Bootstrap!</p>
         </div>
         <div class="col-lg-4 col-md-4">
@@ -242,3 +235,5 @@
 
 </div>
 <!-- /.container -->
+
+@section scripts {@Scripts.Render("~/bundles/ajax")}
