--- a/News/Views/News/Create.cshtml
+++ b/News/Views/News/Create.cshtml
@@ -2,21 +2,20 @@
 @model News.Models.CreateNewsModel
 
 @{
-    ViewBag.Title = "Create New News";
+    ViewBag.Title = "Create News";
     //Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <div class="container">
-<div class="row">
-    <div class="col-lg-12">
-        <h1 class="page-header">
-            @ViewBag.Title
+    <div class="row">
+        <div class="col-lg-12">
+            <h1 class="page-header">
+                @ViewBag.Title
 
-        </h1>
+            </h1>
+        </div>
     </div>
-</div>
 
-<h2>@ViewBag.Title</h2>
 
 @using (Html.BeginForm()) 
 {
@@ -41,15 +40,6 @@
         </div>
     </div>
 
-    @*<script>
-        $(function () {
-            $('#StartDateTime').datetimepicker({
-                format: 'DD-MMM-YYYY HH:mm',
-                sideBySide: true,
-                showTodayButton: true
-            });
-        });
-    </script>*@
     <div class="form-group">
         @Html.LabelFor(model => model.Duration, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
@@ -57,19 +47,6 @@
             @Html.ValidationMessageFor(model => model.Duration, "", new { @class = "text-danger" })
         </div>
     </div>
-
-    @*<script>
-        $(function () {
-            var date = new Date();
-            date.setHours(1);
-            date.setMinutes(0);
-            $('#Duration').datetimepicker({
-                format: 'HH:mm',
-                defaultDate: true,
-                showClear: true
-            });
-        });
-    </script>*@
 
     <div class="form-group">
         @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -105,3 +82,4 @@
     </div>
 </div>
 }
+</div>
