--- a/News/Views/Home/Index.cshtml
+++ b/News/Views/Home/Index.cshtml
@@ -76,7 +76,7 @@
                 else
                 {
                     <div> No Old News availabke </div>
-                }
+                }                
             </div>
             <div class="col-lg-4 col-md-4">
                 <h3><i class="fa fa-folder-open"></i> Popular News</h3>
@@ -97,8 +97,8 @@
 
         <div class="row">
             <div class="col-lg-12">
-                <h2>Modern Business: A Clean &amp; Simple Full Website Template by Start Bootstrap</h2>
-                <p>A complete website design featuring various single page templates from Start Bootstraps library of free HTML starter templates.</p>
+                <h2>KPMG Business: KPMG is a global network of professional firms providing Audit, Tax and Advisory services.</h2>
+                <p>KPMG is a professional service company and one of the Big Four auditors, along with Deloitte, Ernst & Young, and PricewaterhouseCoopers</p>
                 <hr>
             </div>
         </div>
