--- a/News/Views/Home/_NewsDetails.cshtml
+++ b/News/Views/Home/_NewsDetails.cshtml
@@ -1,4 +1,5 @@
 ﻿@using System.Linq
+@using Microsoft.AspNet.Identity
 @model News.Models.NewsDetailsViewModel
 
 @{
@@ -7,48 +8,84 @@
 }
 
 <div class="container">
-<div class="row">
-    <div class="col-lg-12">
-        <h1 class="page-header">
-            @ViewBag.Title
-
-        </h1>
+    <div class="row">
+        <div class="col-lg-12">
+            <h1 class="page-header">
+                @ViewBag.Title
+            </h1>
+        </div>
     </div>
-</div>
 
-            @if (Model.Description != null)
-            {
-                <div>
-                    <div class="description"> Description: @Model.Description</div>
-                </div>
-            }
+    @if (Model.Description != null)
+    {
+        <div>   
+            <div><h3>Title: @Model.Title</h3></div><br/>
+            <div><b>Description:</b> @Model.Description</div><br/>  
+            <div><b>Author Name:</b> @Model.AuthorName</div>
+        </div>
+    }
 
-            @if (Model.Comments.Any())
+    @if (Model.Comments.Any())
+    {
+        @:Comments:
+        <ul>
+            @foreach (var comment in Model.Comments)
             {
-                @:Comments:
-                <ul>
-                    @foreach (var comment in Model.Comments)
+                <li>
+                    @comment.Text
+                    @if (@comment.Author != null)
                     {
-                        <li>
-                            @comment.Text
-                            @if (@comment.Author != null)
-                            {
-                                @: (by @comment.Author)
-                            }
-                        </li>
+                         @: (by @comment.Author)
+                        @comment.Text                                                              
                     }
-                </ul>
+                </li>
             }
-            else
-            {
-                <p> No Comments for this news post.</p>
-            }
+        </ul>
+    }
+    else
+    {
+        <p> No Comments for this news post.</p>
+    }
+           
 
-            @*@if (ViewBag.CanEdit)*@
-            @Html.ActionLink("Edit", "Edit", "News", new { id = Model.Id }, new { @class = "btn btn-default" })
-            <span></span>
-            @Html.ActionLink("Delete", "Delete", "News", new { id = Model.Id }, new { @class = "btn btn-default" })
+    @*@if (ViewBag.CanEdit)*@
+    @Html.ActionLink("Edit", "Edit", "News", new { id = Model.Id }, new { @class = "btn btn-primary" })
+    <span></span>
+    @Html.ActionLink("Delete", "Delete", "News", new { id = Model.Id }, new { @class = "btn btn-primary" })
+               
+    
+    
+    
+    <div class="col-md-12">                        
+        @if (User.Identity.IsAuthenticated)
+        {
+            <div class="comment-editor">
+                @using (Html.BeginForm("Comment","News",FormMethod.Post))
+                {
+                    @Html.AntiForgeryToken()
 
+                    <div class="form-horizontal">
+                        <h4>Add Comment</h4>
+                        @*<b> @Model.AuthorName</b><br />*@
+                        <b>@User.Identity.Name</b><br/>
 
+                        <input type="hidden" value="@Model.Id" name="newsId"/>
+                        <input type="hidden" value="@User.Identity.GetUserId()" name="authorId"/>
+                        <div class="form-group">
+                            <div class="col-sm-6">
+                                <textarea class="form-control text-box multi-line" id="Message" name="Message" rows="3"></textarea>
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <div class="col-sm-6">
+                                <input type="submit" value="Submit" class="btn btn-primary"/>
+                            </div>
+                        </div>
+                    </div>
+                }
+            </div>
+        }
+    </div>
 
 </div>
