--- a/News/Views/Shared/DisplayTemplates/NewsViewModel.cshtml
+++ b/News/Views/Shared/DisplayTemplates/NewsViewModel.cshtml
@@ -29,7 +29,7 @@
                         InsertionMode = InsertionMode.Replace,
                         UpdateTargetId = "news-details-" + Model.Id
                     }, new {@class = "btn btn-primary"})
-                <img class="btn" src="~/images/like.png" height="55px;" width="55px;"/>
+                <img class="" src="~/images/like.png" height="35px;" width="35px;"/><label class="text-info"> @Model.Likes </label>
                 </div>            
         </div>        
     </div>
