--- a/News/Views/Blog/Home1.cshtml
+++ b/News/Views/Blog/Home1.cshtml
@@ -1,25 +1,25 @@
 ﻿@{
-    ViewBag.Title = "Blog Home 1";
+    ViewBag.Title = "News Home 1";
 }
 <div class="container">
     <div class="row">
         <div class="col-lg-12">
             <h1 class="page-header">
-                Blog Home 1
-                <small>Blog Homepage</small>
+                News Home 1
+                <small>News Homepage</small>
             </h1>
             <ol class="breadcrumb">
                 <li>
                     @Html.ActionLink("Home", "Index", "Home")
                 </li>
-                <li class="active">Blog Home 1</li>
+                <li class="active">News Home 1</li>
             </ol>
         </div>
     </div>
     <div class="row">
         <div class="col-lg-8">
             <h1>
-                <a href="@Url.Action("Post")">A Blog Home Template for Bootstrap 3</a>
+                <a href="@Url.Action("Post")">A News Home Template for Bootstrap 3</a>
             </h1>
             <p class="lead">
                 by <a href="#">Start Bootstrap</a>
@@ -31,11 +31,11 @@
                 <img class="img-responsive" src="http://placehold.it/900x300">
             </a>
             <hr>
-            <p>This is a very basic starter template for a blog homepage. It makes use of Font Awesome icons that are built into the 'Modern Business' template, and it makes use of the Bootstrap 3 pager at the bottom of the page.</p>
+            <p>This is a very basic starter template for a News homepage. It makes use of Font Awesome icons that are built into the 'Modern Business' template, and it makes use of the Bootstrap 3 pager at the bottom of the page.</p>
             <a href="@Url.Action("Post")" class="btn btn-primary">Read More <i class="fa fa-angle-right"></i></a>
             <hr>
             <h1>
-                <a href="@Url.Action("Post")">Another Blog Post</a>
+                <a href="@Url.Action("Post")">Another News Post</a>
             </h1>
             <p class="lead">
                 by <a href="#">Start Bootstrap</a>
@@ -51,7 +51,7 @@
             <a href="@Url.Action("Post")" class="btn btn-primary">Read More <i class="fa fa-angle-right"></i></a>
             <hr>
             <h1>
-                <a href="@Url.Action("Post")">Third Blog Post Entry</a>
+                <a href="@Url.Action("Post")">Third News Post Entry</a>
             </h1>
             <p class="lead">
                 by <a href="#">Start Bootstrap</a>
@@ -77,7 +77,7 @@
         </div>
         <div class="col-lg-4">
             <div class="well">
-                <h4>Blog Search</h4>
+                <h4>News Search</h4>
                 <div class="input-group">
                     <input type="text" class="form-control">
                     <span class="input-group-btn">
@@ -90,7 +90,7 @@
             </div>
             <!-- /well -->
             <div class="well">
-                <h4>Popular Blog Categories</h4>
+                <h4>Popular News Categories</h4>
                 <div class="row">
                     <div class="col-lg-6">
                         <ul class="list-unstyled">
