--- a/News/Views/NewsPage/Edit.cshtml
+++ b/News/Views/NewsPage/Edit.cshtml
@@ -2,28 +2,21 @@
 
 @{
     ViewBag.Title = "Edit";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="container">
-    <div class="row">
-        <div class="col-lg-12">
-            <h1 class="page-header">
-                @ViewBag.Title
+<h2>Edit</h2>
 
-            </h1>
-        </div>
-    </div>
-
-
-    @using (Html.BeginForm())
-    {
-        @Html.AntiForgeryToken()
-
+@using (Html.BeginForm())
+{
+    @Html.AntiForgeryToken()
+    
     <div class="form-horizontal">
-        <h4>Edit News</h4>
+        <h4>News</h4>
         <hr />
         @Html.ValidationSummary(true)
         @Html.HiddenFor(model => model.Id)
+
         <div class="form-group">
             @Html.LabelFor(model => model.Title, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -49,6 +42,14 @@
         </div>
 
         <div class="form-group">
+            @Html.LabelFor(model => model.AuthorId, "AuthorId", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownList("AuthorId", String.Empty)
+                @Html.ValidationMessageFor(model => model.AuthorId)
+            </div>
+        </div>
+
+        <div class="form-group">
             @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Description)
@@ -65,10 +66,10 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.AuthorId, "AuthorId", htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.IsPublic, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("AuthorId", Model.AuthorId)
-                @Html.ValidationMessageFor(model => model.AuthorId)
+                @Html.EditorFor(model => model.IsPublic)
+                @Html.ValidationMessageFor(model => model.IsPublic)
             </div>
         </div>
 
@@ -81,25 +82,13 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.IsPublic, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.IsPublic)
-                @Html.ValidationMessageFor(model => model.IsPublic)
-            </div>
-        </div>
-
-        <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Save" class="btn btn-default" />
             </div>
         </div>
     </div>
-    }
+}
 
-    <div>
-        @Html.ActionLink("Back to List", "Index")
-    </div>
-    @section Scripts {
-        @Scripts.Render("~/bundles/jqueryval")
-    }
+<div>
+    @Html.ActionLink("Back to List", "Index")
 </div>
