--- a/News/Views/Shared/_News.cshtml
+++ b/News/Views/Shared/_News.cshtml
@@ -6,25 +6,36 @@
 
 <div class="row">
     <div class="col-lg-4 col-md-4">
-        <h3><i class="fa fa-check-circle"></i> Latest News</h3>                
+        <h3><i class="fa fa-check-circle"></i> Latest News</h3>
         @if (Model.LatestNews.Any())
         {
             @Html.DisplayFor(x => x.LatestNews)
         }
         else
         {
-            <div> No Events </div>
+            <div> No Latest News </div>
         }
     </div>
     <div class="col-lg-4 col-md-4">
-        <h3><i class="fa fa-pencil"></i> Old News </h3>                
+        <h3><i class="fa fa-pencil"></i> Old News </h3>
         @if (Model.OldNews.Any())
         {
             @Html.DisplayFor(x => x.OldNews)
         }
         else
         {
-            <div> No Latest News available. </div>
+            <div> No Old News available. </div>
+        }
+    </div>
+    <div class="col-lg-4 col-md-4">
+        <h3><i class="fa fa-pencil"></i> Popular News </h3>
+        @if (Model.PopularNews.Any())
+        {
+            @Html.DisplayFor(x => x.PopularNews)
+        }
+        else
+        {
+            <div> No Popular News available. </div>
         }
     </div>
 </div>
